--- a/project/vipdrupal/disclaimer/index.html
+++ b/project/vipdrupal/disclaimer/index.html
@@ -43,6 +43,13 @@
                       <div property="schema:text" class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
 
                         <details open>
+                          <summary>Credits and news ownership information</summary>
+                            <ul>
+                              <li><p>The provided feeds to the news and their respective websites can be accessed at <b>Feeds</b> section. You can subscribe for free to any feeds at <b>Feeds</b> section where website sources are provided. Except podcasts and videos, the news feeds and contributors are publicly accessible at https://www.drupal.org/planet. The feeds and contributors list as seen at this Drupal Planet page are curated and managed by Drupal team, not the app developer. This app only provides convenient ways to read news anywhere, anytime, without laptops. This app also minimize the download size by hundreds of percent, from 3 - 15MBs to a fraction of 50KBs to save your bandwidth.<br></li>
+                            </ul>
+                          </div>
+                        </details>
+                        <details>
                           <summary>Please be informed before reviews:</summary>
                           <div>
                             <ul>
