--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -113,7 +113,7 @@
                             <b>Check out disclaimer for detailed info and glitches, basically:</b>
                             <ol>
                               <li>Be sure <b>Battery saver</b> feature turned off specific for this app to allow downloads via background processing. This varies based on devices: <br>1. (System) Settings > Battery & performance > Battery saver : Off. <br>2. (System) Settings > Battery & performance > App battery saver > VIPDownloader > Background settings: No restrictions. Check out your system <b>Settings</b> for the correct location of this particular settings.</li>
-                              <li>If you keep getting 403 (Forbidden) message, the link is likely blocked, gated or restricted. Either you have to register or login first, pay premium subscription if any such requirements. Other failures like 404 (Not Found), etc. will also be prompted. At any rate, we cannot download if such failures happen, sorry. They are beyond our power. Delete such failing  processed links. Please try other links instead.</li>
+                              <li>If you keep getting 403 (Forbidden) message, the link is likely blocked, gated or restricted. Either you have to register or login first, pay premium subscription if any such requirements. Other failures like 404 (Not Found), etc. will also be prompted. At any rate, we cannot download if such failures happen, sorry. They are beyond our power. Delete such failing processed links. Please try other links instead.</li>
                             </ol>
 
                           </div>
@@ -144,10 +144,9 @@
                             <ul>
                               <li>Currently only works for profile pages with small thumbnails, not those with large images. Although scraping /tags, /explore, or practically any pages is doable, this feature is postponed till enough requests.</li>
                               <li>Strong internet connection. Do not scrape at slow connection!</li>
-                              <li>Large size of device external storage (30gb+ to play nice), else you will be locked down due to out of space exception. Do not panic, though. Just kill the app, or power-off the device at worst. Manage your space, move or delete files.
-                                Switch or plug in a new empty card. Be sure to select it via <b>Organize directories</b>.</li>
+                              <li>Large size of device external storage (30gb+ to play nice), else you will be locked down due to out of space exception. Do not panic, though. Just kill the app, or power-off the device at worst. Manage your space, move or delete files. Switch or plug in a new empty card. Be sure to select it via <b>Organize directories</b>.</li>
                               <li><b>FREE</b> version: some minimum points</li>
-                              <li>Scraping requires time, be sure to disable <b>Battery Optimization</b> for this app, otherwise killed by the system. <br><b>Steps</b>: 1. Open System Settings → Application/ Apps.<br> 2. Find this app (<b>VIPDownloader</b>). <br> 3. Disable <b>Battery Optimization</b>. Some devices may have different way to disable it.</li>
+                              <li>Scraping requires time, be sure to disable <b>Battery Optimization</b> for this app, otherwise killed by the system. <br><b>Steps</b>:<br>1. Open System Settings → Application/ Apps.<br> 2. Find this app (<b>VIPDownloader</b>). <br> 3. Disable <b>Battery Optimization</b>. Some devices may have different way to disable it.</li>
                             </ul>
 
                           </div>
@@ -176,7 +175,7 @@
                               <li>Have backup dummy accounts, many.</li>
                               <li>Use different dummy accounts, follow the same private one. Input the first at <b>Settings > Private mode</b>. The other at Instagram.</li>
                               <li>Use the same dummy accounts, and do trials and errors at your own descretion.</li>
-                              <li>Install VPN, or proxy tools.</li>
+                              <li>Install paid or reliable VPN, or proxy tools. Free versions will drop your internet speed ridiculously from 11 Mbps to 100 Kb.</li>
                             </ul>
                           </div>
                         </details>
