--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -154,6 +154,27 @@
                           </div>
                         </details>
                         <details>
+                          <summary>Reload or refresh page</summary>
+                          <div>
+                             Please pull down the screen to reaload or refresh web pages like any regular browsers. Useful:
+                            <ul>
+                              <li>to fetch the latest feeds or posts.</li>
+                              <li>if pages are blank due to failed connection, etc.</li>
+                            </ul>
+                          </div>
+                        </details>
+                        <details>
+                          <summary>Other supported sites</summary>
+                          <div>
+                            <ul>
+                              <li>Long press (not click) on <b>TIMESTAMP</b> or <b>TITLE</b> at listing pages if available.</li>
+                              <li>Find and hit <b>Copy link</b>, normally displayed after clicking <b>three dots</b> icon, <b>SHARE</b> icon, or alike.</li>
+                              <li>Or visit the video full page. Play the video. Skip ads, if any. Wait for 10s or so for the parser to do its job. If prompted, the site is supported.</li>
+                              <li><b>Guess works</b>, not guaranteed: long press (not click) on any <b>TITLES</b>, or video <b>THUMBNAILS</b>, normally at listing pages. If supported you will be prompted, processed for success or failure. If failed, then not supported.</li>
+                            </ul>
+                          </div>
+                        </details>
+                        <details>
                           <summary>Tips</summary>
                           <div>
                             <ul>
