--- a/project/vipdrupal/license/index.html
+++ b/project/vipdrupal/license/index.html
@@ -24,6 +24,7 @@
 <body class="layout-no-sidebars path-node page-node-type-page">
   <div class="dialog-off-canvas-main-canvas" data-off-canvas-main-canvas>
     <div id="page" class="l-page page"><a id="top" tabindex="-1"></a>
+      <header id="header" class="l-header" role="banner" aria-label="Site header">
       <div id="block-bartok-branding--2" class="block--bartok-branding--2 site-branding block block--system block--system-branding-block"><a href="/" title="Home" rel="home" class="site-branding__logo"></a></div>
       </header>
 
@@ -50,7 +51,7 @@
                             <div id="menu">
     <p><a class="plain menuitem" href="#apache"><b>DruPocket for Drupal</b> &#10143;<br>
         <small>The Apache License<br>
-            <span class="licenseowner">Copyright (C) 2018 Gaus Surahman</span></small></a>
+            <span class="licenseowner">Copyright (C) 2018, 2021 Gaus Surahman</span></small></a>
     </p><hr>
     <p><a class="plain menuitem" href="#apache"><b>OkHttp</b> &#10143;<br>
         <small>The Apache License<br>
@@ -174,7 +175,7 @@ THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ``AS IS'' AND ANY EXPR
         </div>
       </div>
       <footer class="l-footer visible-desktop">
-        <p><small>© 2008 gaus <span class="visible-desktop"></span>| <a href="https://play.google.com/store/apps/details?id=vip.gaus.drupal.pocket.free"><b>VIP Downloader for Instagram, Facebook, Reddit, Tiktok, Twitter, Vimeo</b></a></span></small></p>
+        <p><small>© 2008 gaus <span class="visible-desktop"></span>| <a href="https://play.google.com/store/apps/details?id=vip.gaus.drupal.pocket.free"><b>DruPocket for Drupal. The unofficial Drupal news, tutorials, Drush, podcasts & videos</b></a></span></small></p>
       </footer>
     </div>
   </div>
