--- a/project/vipinstagram/license/index.html
+++ b/project/vipinstagram/license/index.html
@@ -24,6 +24,7 @@
 <body class="layout-no-sidebars path-node page-node-type-page">
   <div class="dialog-off-canvas-main-canvas" data-off-canvas-main-canvas>
     <div id="page" class="l-page page"><a id="top" tabindex="-1"></a>
+    <header id="header" class="l-header" role="banner" aria-label="Site header">
       <div id="block-bartok-branding--2" class="block--bartok-branding--2 site-branding block block--system block--system-branding-block"><a href="/" title="Home" rel="home" class="site-branding__logo"></a></div>
       </header>
 
