--- a/project/vipdrupal/faq/index.html
+++ b/project/vipdrupal/faq/index.html
@@ -73,7 +73,7 @@
                         <details>
                           <summary>How to reset database?</summary>
                           <div>
-                            Visit <b>System Settings > Apps > DruPocket > Clear cache| Clear data</b>. This will clean out database to its factory should you need to save some space. Be informed, you can no longer access the files. Be sure to back up database first via the provided settings for just incase you will need sme archived news later.
+                            Visit <b>System Settings > Apps > DruPocket > Clear cache| Clear data</b>. This will clean out database to its factory should you need to save some space. Be informed, you can no longer access the files. Be sure to back up database first via the provided settings for just incase you will need some archived news later.
                           </div>
                         </details>
                         <details>
