- Added Copyright section.

--- a/project/vipdrupal/disclaimer/index.html
+++ b/project/vipdrupal/disclaimer/index.html
@@ -41,7 +41,14 @@
                     </header>
                     <div class="node__content clearfix">
                       <div property="schema:text" class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
+                        <details open>
+                          <summary>Copyright</summary>
+                          <div>
+                            <p>Content downloaded using this app (digital downloads, images, texts, graphics, logos) is the property of their respective owners and/or its content creators and protected by international copyright laws. You are using it for your own personal, educational or entertainment usages such study, research, teaching, commentary, criticism, parody, reporting, reviews and any personal usages. They may contain copyrighted contents not authorized for use by the owner. We are not held responsible in any way or means for any use, misuse or abuse that you conduct on your own discretion in regards to the downloaded materials.</p>
 
+                            <p>Read more about <a href="https://www.law.cornell.edu/uscode/text/17/107">Section 107 of the Copyright Act</a>.</p>
+                          </div>
+                        </details>
                         <details open>
                           <summary>Credits and news ownership information</summary>
                             <ul>
@@ -55,6 +62,7 @@
                             <ul>
                               <li>Please do not submit negative reviews for fun. Use the provided Feedback channel to help improve the app instead. Negative reviews without followups and updates after being corrected are like hit-and-run, not constructive and disheartening. It is a labor of love for Drupal lovers to foster Drupal. Hopefully useful to stay updated in your busy days. Thank you for your kind considerations and positive supports!</li>
                               <li>The app doesn't collect sensitive end-user data. We do collect crash reports and user interactions using common third party analytics, and via your own conscious submission of the crash reports. Find the crash report at <b>About > Crash report</b>. If you don't submit it, no data is sent to us. You can also preview the submitted data on the email body before submission.</li>
+                              <li>We do not endorse the streaming or downloading of copyright protected material without permission of the copyright holder.</li>
                               <li>The following are needed to properly address potential crash solutions: Environment, Android version, OS version, DruPocket for Drupal version and flavor, Model, Device, Product, SDK, Screen density and resolution. You can also remove some info as needed. We do not share the collected data. Both are solely to improve user experience and engagement.</li>
                               <li>The DruPocket for Drupal offers additional features such as adding new personal notes/ todos or feeds, archiving, editing and deleting existing notes/ feeds. Only the pro version supports deletions, though. These optional features may need optional permissions. <b>Optional</b> means none is enabled until you do so:
                                 <ul>
