--- a/project/vipinstagram/disclaimer/index.html
+++ b/project/vipinstagram/disclaimer/index.html
@@ -41,7 +41,14 @@
                     </header>
                     <div class="node__content clearfix">
                       <div property="schema:text" class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
+                        <details open>
+                          <summary>Copyright</summary>
+                          <div>
+                            <p>Content downloaded using this app (digital downloads, images, texts, graphics, logos) is the property of their respective owners and/or its content creators and protected by international copyright laws. You are using it for your own personal, educational or entertainment usages such study, research, teaching, commentary, criticism, parody, reporting, reviews and any personal usages. They may contain copyrighted contents not authorized for use by the owner. We are not held responsible in any way or means for any use, misuse or abuse that you conduct on your own discretion in regards to the downloaded materials.</p>
 
+                            <p>Read more about <a href="https://www.law.cornell.edu/uscode/text/17/107">Section 107 of the Copyright Act</a>.</p>
+                          </div>
+                        </details>
                         <details open>
                           <summary>Please be informed before reviews:</summary>
                           <div>
@@ -70,9 +77,10 @@
 
                           </div>
                         </details>
-
                         <details>
                           <summary>Known bugs/ issues</summary>
+
+                          <div>
                             <ul>
                               <li>This app doesn't use official APIs. Meaning it may break when the sites change their internals. If it was working, then suddenly breaks, please report via <b>Feedback</b> form. Kindly do not submit negative reviews when this happens. It is simply beyond our power. We'll do our best to fix it ASAP thanks to your reports.<br></li>
                               <li>Reddit videos have no sound. I haven't been able to mux the audio, yet. Please ignore Reddit till future fixes.<br></li>
