- Added Copyright section.

--- a/project/vipinstagram/disclaimer/id/index.html
+++ b/project/vipinstagram/disclaimer/id/index.html
@@ -41,7 +41,14 @@
                     </header>
                     <div class="node__content clearfix">
                       <div property="schema:text" class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
+                        <details open>
+                          <summary>Hak cipta</summary>
+                          <div>
+                            <p>Konten yang diunduh menggunakan aplikasi ini (unduhan digital, gambar, teks, grafik, logo) adalah milik dari pemiliknya masing-masing dan/atau pembuat kontennya dan dilindungi oleh undang-undang hak cipta internasional. Anda menggunakannya untuk penggunaan pribadi, pendidikan, atau hiburan seperti studi, penelitian, pengajaran, komentar, kritik, parodi, pelaporan, ulasan, dan penggunaan pribadi lainnya. Materi unduhan mungkin berisi konten berhak cipta yang tidak diizinkan untuk digunakan oleh pemiliknya. Kami tidak bertanggung jawab dengan cara apa pun atas penggunaan, atau penyalahgunaan apa pun yang Anda lakukan atas kebijaksanaan Anda sendiri sehubungan dengan materi yang diunduh.</p>
 
+                            <p>Baca selengkapnya tentang <a href="https://www.law.cornell.edu/uscode/text/17/107">Pasal 107 Undang-Undang Hak Cipta</a>.</p>
+                          </div>
+                        </details>
                         <details open>
                           <summary>Mohon dipahami sebelum kirim tinjauan:</summary>
                           <div>
