--- a/project/vipinstagram/howto/id/index.html
+++ b/project/vipinstagram/howto/id/index.html
@@ -58,7 +58,7 @@
                               <li>Or hit <b>Share link</b>, and find <b>VIP Downloader</b> icon.</li>
                             </ol>
                             <p>Be informed! Scraping requires Option A. Option B and scraping may require you providing dummy credentials via <b>Settings > Accounts</b> due to restrictions. Option B may trigger annoying <b>New login</b> email warnings due to being less persistent sessions. Please use the internal (option A) for convenience regardless its limitations -- due to being web app, not native app. The same principle likely applies to other supported sites, unless otherwise stated.</p>
-                            <img src="instagram-small.jpg"  srcset="instagram-medium.jpg 640w, instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily with Android" />
+                            <img src="../instagram-small.jpg"  srcset="../instagram-medium.jpg 640w, ../instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily with Android" />
 
                           </div>
                         </details>
@@ -78,7 +78,7 @@
                           </ol>
 
                           <p>Be informed! Some ISPs like those in Indonesia block Reddit, Vimeo, etc. Use VPN, proxies, etc., or stay safe. Only works for a stand-alone post, not the one embedded inside another post. Just visit its original post to download, if the issue still stands.</p>
-                          <img src="reddit-small.jpg"  srcset="reddit-medium.jpg 640w, reddit-large.jpg 1024w" alt="How to download Reddit videos easily with Android" />
+                          <img src="../reddit-small.jpg"  srcset="../reddit-medium.jpg 640w, ../reddit-large.jpg 1024w" alt="How to download Reddit videos easily with Android" />
 
                           </div>
                         </details>
@@ -98,7 +98,7 @@
                           </ol>
                           <p>Be informed! Unlike plain images, or other video sites, long pressing on Twitter video image previews will not work. Only works for a stand-alone tweet, not the one embedded inside another tweet, identified by a bordered box/ card. Just visit its original tweet to download. Images leading to external sites, identified by <b>https://t.co/...</b> url, not internally hosted at Twitter, are not supported, yet.</p>
 
-                          <img src="twitter-small.jpg"  srcset="twitter-medium.jpg 640w, twitter-large.jpg 1024w" alt="How to download Twitter photos and videos easily with Android" />
+                          <img src="../twitter-small.jpg"  srcset="../twitter-medium.jpg 640w, ../twitter-large.jpg 1024w" alt="How to download Twitter photos and videos easily with Android" />
 
                           </div>
                         </details>
@@ -119,7 +119,7 @@
                           </ol>
                           <p>Be informed! The web interface lacks of search and listing features. You can however search <b>usernames</b> using the internal search provided by this app at the top right corner. You can also download videos directly from TikTok app or its similar apps. The only differences are slightly larger size, no watermark, and integrated organizations with other video providers if using this app. And no watermak for TikTok and Like. For SnackVideo, please use the <b>Copy link</b> via their apps as it has no usable website.</p>
 
-                          <img src="tiktok-small.jpg"  srcset="tiktok-medium.jpg 640w, tiktok-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
+                          <img src="../tiktok-small.jpg"  srcset="../tiktok-medium.jpg 640w, ../tiktok-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
 
                           </div>
                         </details>
@@ -138,7 +138,7 @@
                           </ol>
                           <p>Be informed! Some ISPs like those in Indonesia block Reddit, Vimeo, etc. Use VPN, proxies, etc., or stay safe.</p>
 
-                          <img src="vimeo-small.jpg"  srcset="vimeo-medium.jpg 640w, vimeo-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
+                          <img src="../vimeo-small.jpg"  srcset="../vimeo-medium.jpg 640w, ../vimeo-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
 
                           </div>
                         </details>
