- Added Copyright section.

--- a/project/vipinstagram/howto/id/index.html
+++ b/project/vipinstagram/howto/id/index.html
@@ -59,7 +59,7 @@
                               <li>Tekan <b>Salin tautan</b>.</li>
                               <li>Atau tekan <b>Bagikan tautan</b>, dan temukan ikon <b>Pengunduh VIP</b>.</li>
                             </ol>
-                            <p>Informasi! Pengikisan memerlukan Opsi A. Opsi B dan pengikisan mungkin mengharuskan Anda memberikan kredensial tiruan melalui <b>Setelan > Akun</b> karena pembatasan. Opsi B dapat memicu peringatan email <b>Login baru</b> yang mengganggu karena sesi yang kurang persisten. Silakan gunakan internal (opsi A) untuk kenyamanan terlepas dari keterbatasannya -- karena merupakan aplikasi web, bukan aplikasi asli. Prinsip yang sama kemungkinan berlaku untuk situs lain yang didukung, kecuali dinyatakan lain.</p>
+                            <p>Informasi! Pengikisan (<em>scraping</em>) memerlukan Opsi A. Opsi B dan pengikisan mungkin mengharuskan Anda memberikan kredensial tiruan melalui <b>Setelan > Akun</b> karena pembatasan. Opsi B dapat memicu peringatan email <b>Login baru</b> yang mengganggu karena sesi yang kurang persisten. Silakan gunakan internal (opsi A) untuk kenyamanan terlepas dari keterbatasannya -- karena merupakan aplikasi web, bukan aplikasi asli. Prinsip yang sama kemungkinan berlaku untuk situs lain yang didukung, kecuali dinyatakan lain.</p>
                             <img src="../instagram-small.jpg"  srcset="../instagram-medium.jpg 640w, ../instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily with Android" />
 
                           </div>
@@ -123,6 +123,12 @@
 
                           <img src="../tiktok-small.jpg"  srcset="../tiktok-medium.jpg 640w, ../tiktok-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
 
+                          </div>
+                        </details>
+                        <details>
+                          <summary>Jamendo</summary>
+                          <div>
+                            <p>Pada halaman daftar lagu tempat Anda melihat deretan trek, tekan lama pada <b>JUDUL</b> lagu. Bukan gambar mini, bukan ikon (ikon unduhan, dll.), atau judul di halaman penuh.</p>
                           </div>
                         </details>
                         <details>
