--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -36,7 +36,9 @@
               <div class="region region-content">
                 <div id="block-bartok-bold-system-main--2" class="block--bartok-bold-system-main--2 block block--system block--system-main-block">
                   <article role="article" about="/project/vipinstagram/howto" typeof="schema:WebPage" class="node node--1060 node--type-page node--view-mode-full clearfix">
-                    <header><span property="schema:name" content="Howto" class="rdf-meta hidden"></span></header>
+                    <header><span property="schema:name" content="FAQ" class="rdf-meta hidden"></span>
+                        <a href="https://gausarts.github.io/project/vipinstagram/howto/index.html">EN</a> | <a href="https://gausarts.github.io/project/vipinstagram/howto/id/index.html">ID</a>
+                    </header>
                     <div class="node__content clearfix">
                       <div property="schema:text" class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
 
@@ -129,6 +131,12 @@
                           </div>
                         </details>
                         <details>
+                          <summary>Jamendo</summary>
+                          <div>
+                            <p>At song listing pages where you see rows of tracks, long press on a song <b>TITLE</b>. Not thumbnails, not icons (download icon, etc.), nor titles at full pages.</p>
+                          </div>
+                        </details>
+                        <details>
                           <summary>Vimeo</summary>
                           <div>
                             <ol>
@@ -151,11 +159,10 @@
                           <summary>Other supported sites</summary>
                           <div>
                             <ul>
+                              <li><b>Guess works</b>, not guaranteed: long press (not click) on any <b>TITLES</b>, or video <b>THUMBNAILS</b>, normally at listing pages. If supported you will be prompted, processed for success or failure. If failed, then not supported.</li>
                               <li>Find and hit <b>Copy link</b>, normally displayed after clicking <b>three dots</b> icon, <b>SHARE</b> icon, or alike.</li>
                               <li>Or long press (not click) on <b>TIMESTAMP</b> if available.</li>
                               <li>Or visit the video full page. Play the video. Skip ads, if any. Wait for 10s or so for the parser to do its job. If prompted, the site is supported.</li>
-                              <li><b>Guess works</b>, not guaranteed: long press (not click) on any <b>TITLES</b>, or video <b>THUMBNAILS</b>, normally at listing pages. If supported you will be prompted, processed for success or failure. If failed,
-                                then not supported.</li>
                             </ul>
                           </div>
                         </details>
