--- a/project/vipinstagram/howto/id/index.html
+++ b/project/vipinstagram/howto/id/index.html
@@ -128,7 +128,23 @@
                         <details>
                           <summary>Jamendo</summary>
                           <div>
-                            <p>Pada halaman daftar lagu tempat Anda melihat deretan trek, tekan lama pada <b>JUDUL</b> lagu. Bukan gambar mini, bukan ikon (ikon unduhan, dll.), atau judul di halaman penuh.</p>
+                            <p>Pada halaman daftar lagu tempat Anda melihat deretan trek:</p>
+                             <ol>
+                               <li>Tekan lama pada <b>JUDUL</b> lagu. Bukan gambar mini, bukan ikon (ikon unduhan, dll.), bukan judul di halaman penuh.</li>
+                             </ol>
+                             <img src="../jamendo-small.jpg" srcset="../jamendo-medium.jpg 640w, ../jamendo-large.jpg 1024w" alt="How to download Jamendo images easily with Android" />
+                          </div>
+                        </details>
+                        <details>
+                          <summary>Unsplash</summary>
+                          <div>
+                            <ol>
+                              <li>Tekan lama pada <b>FOTO</b> di halaman daftar, bukan halaman penuh.</li>
+                               <li>Atau tekan lama pada tautan <b>UNDUH</b>, bukan panah ke bawah.</li>
+                            </ol>
+
+                            <img src="../unsplash-small.jpg" srcset="../unsplash-medium.jpg 640w, ../unsplash-large.jpg 1024w" alt="How to download Unsplash images easily with Android" />
+
                           </div>
                         </details>
                         <details>
