--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -133,7 +133,24 @@
                         <details>
                           <summary>Jamendo</summary>
                           <div>
-                            <p>At song listing pages where you see rows of tracks, long press on a song <b>TITLE</b>. Not thumbnails, not icons (download icon, etc.), nor titles at full pages.</p>
+                            <p>At song listing pages where you see rows of tracks:</p>
+                            <ol>
+                              <li>Long press on a song <b>TITLE</b>. Not thumbnails, not icons (download icon, etc.), nor titles at full pages.</li>
+                            </ol>
+
+                            <img src="jamendo-small.jpg" srcset="jamendo-medium.jpg 640w, jamendo-large.jpg 1024w" alt="How to download Jamendo images easily with Android" />
+                          </div>
+                        </details>
+                        <details>
+                          <summary>Unsplash</summary>
+                          <div>
+                            <ol>
+                              <li>Long press on <b>IMAGE</b> at listing pages, not full pages.</li>
+                              <li>Or long press on <b>DOWNLOAD</b> link, not the arrow down.</li>
+                            </ol>
+
+                            <img src="unsplash-small.jpg" srcset="unsplash-medium.jpg 640w, unsplash-large.jpg 1024w" alt="How to download Unsplash images easily with Android" />
+
                           </div>
                         </details>
                         <details>
